# pemel

./: CHANGELOG.md  Cargo.toml  LICENCE  README.md
src/: eval_error.rs  expr.rs  expr_test.rs  lib.rs  macros.rs
src/parser/: lexer.rs  macros.rs  mod.rs  parse_error.rs  parser.rs  token.rs
