[package]
name = "pemel"
version = "0.2.0"
edition = "2021"
authors = ["Mikulas Bartacek <mikulasbartac@gmail.com>"]
description = "Parsing and Evaluating of Math Expressions Library"
homepage = "https://github.com/MikulasBar/pemel"
repository = "https://github.com/MikulasBar/pemel"
license = "MIT"
keywords = ["math", "expression", "parser", "evaluator"]
categories = ["science", "mathematics"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[profile.release]
lto = true
codegen-units = 1
panic = "abort"

